# Auralis

./: .gitattributes  .gitignore  LICENSE  README.md  Run Auralis.bat  Stop Auralis.bat  pyproject.toml
auralis/: __init__.py  run.py
auralis/api/: main.py
auralis/engine/: __init__.py  analysis.py  console.py  loudness.py  mastering.py  mixer.py  pipeline.py  profiles_loader.py
auralis/engine/profiles/: neutral.yaml  pop-maximal.yaml  rhythmic-sparse.yaml  vocal-forward-rnb.yaml  warm-soul.yaml
auralis/packaging/: build_windows.md
auralis/voice/: __init__.py  finish.py  paired.py  pitch.py  profiles.py  seed_vc.py
docs/: DESIGN.md  PAIRED_CALIBRATION.md  PITCH_POLISH.md  RECONSTRUCTION_ROADMAP.md  VOCAL_FINISH.md  VOICE_STUDIO.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Knob.jsx  VocalRack.jsx  VoiceStudio.jsx
tests/: test_engine.py  test_paired_calibration.py  test_pitch_polish.py  test_vocal_finish.py  test_voice.py
tools/: install_seed_vc.ps1  start_auralis.ps1  stop_auralis.ps1
