[project]
name = "auralis"
version = "0.8.0"
description = "Local-first stem mixing, mastering, and consent-based singing voice conversion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "soundfile>=0.12",
    "pyloudnorm>=0.1.1",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "matchering>=2.0.6",
    "librosa>=0.10",
    "pedalboard>=0.9",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]

[project.scripts]
auralis = "auralis.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["auralis*"]
